<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginHorizontal="20dp"
    tools:context=".activity.ProfileActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="28dp"
        style="@style/Heading1"
        android:textColor="@color/gray_700"
        android:text="@string/profile"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="60dp"
        android:gravity="center">
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="144dp"
            android:layout_height="144dp"
            android:layout_gravity="center"
            app:civ_circle_background_color="@color/gray_300"
            android:src="@drawable/avatar"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="2dp"
            style="@style/Display"
            android:textColor="@color/gray_700"
            android:text="Caroline Sentiaji"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/BodyReguler"
            android:textColor="@color/gray_500"
            android:text="19.11.2697 | 19IF02"/>

    </LinearLayout>

    <Button
        android:id="@+id/btn_watchlist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:backgroundTint="@color/gray_700"
        android:textColor="@color/white"
        android:paddingVertical="20dp"
        android:text="@string/view_watchlist"
        ></Button>


    <Button
        android:id="@+id/buttonLang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:backgroundTint="@color/white"
        android:textColor="@color/gray_700"
        android:paddingVertical="20dp"
        android:text="@string/settings"
        ></Button>


</LinearLayout>