<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="20dp"
        android:paddingVertical="40dp">
        <!--    Greetings-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/Heading1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:text="Hi, Caroline"
                    android:textColor="@color/gray_700" />

                <TextView
                    style="@style/Caption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:text="@string/greetingText"
                    android:textColor="@color/gray_500" />
            </LinearLayout>
            <!--        ProfileImage-->
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_icon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:src="@drawable/avatar"
                app:civ_circle_background_color="@color/gray_300" />

        </LinearLayout>

        <!--    searchbar-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/custom_border"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:layout_margin="12dp"
                app:srcCompat="@drawable/search" />

            <EditText
                android:id="@+id/search_bar"
                style="@style/Caption"
                android:maxLines="1"
                android:imeOptions="actionSearch"
                android:inputType="text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@null"
                android:ems="20"
                android:hint="@string/searchText"
                android:textColor="@color/gray_500" />
        </LinearLayout>
        <!--Movie Heading-->
        <TextView
            style="@style/Heading2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:text="Trending"
            android:textColor="@color/gray_700" />

        <!--Trending Movie-->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclehorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"/>

        <TextView
            style="@style/Heading2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:text="@string/allMovie"
            android:textColor="@color/gray_700" />

        <!--    movie list recycleview-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycleview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </RelativeLayout>


    </LinearLayout>
</ScrollView>
